--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,9 @@ find_package(SDL2 REQUIRED)
 file(GLOB CORE_FILES  core/*.cc  core/*.hh)
 file(GLOB DATA_FILES  data/*.cc  data/*.hh)
 file(GLOB SCENE_FILES scene/*.cc scene/*.hh)
+file(GLOB UTIL_FILES  util/*.cc  util/*.hh)
 add_executable(${PROJECT_NAME} main.cc
-    ${CORE_FILES} ${DATA_FILES} ${SCENE_FILES})
+    ${CORE_FILES} ${DATA_FILES} ${SCENE_FILES} ${UTIL_FILES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin RUNTIME_OUTPUT_NAME hojy)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
