--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,5 @@
 project(HeroesOfJinYongMain)
 
-find_package(SDL2 REQUIRED)
-
 file(GLOB CORE_FILES  core/*.cc  core/*.hh)
 file(GLOB DATA_FILES  data/*.cc  data/*.hh)
 file(GLOB MEM_FILES   mem/*.cc   mem/*.hh)
@@ -14,12 +12,4 @@ add_executable(${PROJECT_NAME} main.cc
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin RUNTIME_OUTPUT_NAME hojy)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(${PROJECT_NAME} PRIVATE SDL_MAIN_HANDLED)
-if(TARGET SDL2::SDL2-static)
-    target_link_libraries(${PROJECT_NAME} SDL2::SDL2-static)
-elseif(TARGET SDL2::SDL2)
-    target_link_libraries(${PROJECT_NAME} SDL2::SDL2)
-else()
-    target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
-    target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
-endif()
-target_link_libraries(${PROJECT_NAME} soxr ADLMIDI)
+target_link_libraries(${PROJECT_NAME} soxr ADLMIDI SDL2_gfx)
