--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,4 +12,4 @@ add_executable(${PROJECT_NAME} main.cc
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin RUNTIME_OUTPUT_NAME hojy)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(${PROJECT_NAME} PRIVATE SDL_MAIN_HANDLED)
-target_link_libraries(${PROJECT_NAME} soxr ADLMIDI SDL2_gfx)
+target_link_libraries(${PROJECT_NAME} soxr ADLMIDI SDL2_gfx fmt::fmt)
