--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,9 @@ set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAK
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(${PROJECT_NAME} PRIVATE SDL_MAIN_HANDLED)
 target_link_libraries(${PROJECT_NAME} soxr ADLMIDI SDL2_gfx fmt::fmt)
+
+if(BUILD_TOOLS)
+    add_executable(mergepic tools/mergepic.cc util/file.cc util/file.hh)
+    set_target_properties(mergepic PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+    target_include_directories(mergepic PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+endif()
