--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,30 @@ project(HeroesOfJinYong)
 
 set(CMAKE_CXX_STANDARD 17)
 
+option(USE_STATIC_CRT "Use static C runtime" OFF)
+
+if(USE_STATIC_CRT)
+    if(CMAKE_COMPILER_IS_GNUCXX)
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static -static-libgcc -static-libstdc++")
+    elseif(MSVC)
+        set(CompilerFlags
+            CMAKE_CXX_FLAGS
+            CMAKE_CXX_FLAGS_DEBUG
+            CMAKE_CXX_FLAGS_RELEASE
+            CMAKE_CXX_FLAGS_MINSIZEREL
+            CMAKE_CXX_FLAGS_RELWITHDEBINFO
+            CMAKE_C_FLAGS
+            CMAKE_C_FLAGS_DEBUG
+            CMAKE_C_FLAGS_RELEASE
+            CMAKE_C_FLAGS_MINSIZEREL
+            CMAKE_C_FLAGS_RELWITHDEBINFO
+            )
+        foreach(CompilerFlag ${CompilerFlags})
+            string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+            set(${CompilerFlag} "${${CompilerFlag}}" CACHE STRING "msvc compiler flags" FORCE)
+        endforeach()
+    endif()
+endif()
+
 add_subdirectory(deps)
 add_subdirectory(src)
