--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -48,4 +48,16 @@ if(DEPS_BUILD_SHARED)
     set_target_properties(ADLMIDI_shared PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 endif()
 
+if(WIN32)
+    set(DIRECTX OFF CACHE BOOL "" FORCE)
+    add_subdirectory(SDL2)
+    if(TARGET SDL2-static)
+        target_compile_definitions(SDL2-static PRIVATE SDL_DISABLE_WINDOWS_IME)
+    endif()
+    if(TARGET SDL2)
+        target_compile_definitions(SDL2 PRIVATE SDL_DISABLE_WINDOWS_IME)
+        set_target_properties(SDL2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+    endif()
+endif()
+
 add_subdirectory(SDL2_gfx)
