--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -49,7 +49,14 @@ if(DEPS_BUILD_SHARED)
 endif()
 
 if(WIN32)
-    set(DIRECTX OFF CACHE BOOL "" FORCE)
+    set(DIRECTX OFF CACHE BOOL "Use DirectX for Windows video/audio" FORCE)
+    set(RENDER_D3D OFF CACHE BOOL "Enable the Direct3D render driver" FORCE)
+    set(WASAPI ON CACHE BOOL "Use the windows WASAPI audio driver" FORCE)
+    set(SDL_SUBSYSTEMS_TO_DISABLE Power Timers Filesystem Dlopen Sensor Locale)
+    foreach(_SUB ${SDL_SUBSYSTEMS_TO_DISABLE})
+        string(TOUPPER ${_SUB} _OPT)
+        set(SDL_${_OPT} OFF CACHE BOOL "Enable the ${_SUB} subsystem" FORCE)
+    endforeach()
     add_subdirectory(SDL2)
     if(TARGET SDL2-static)
         target_compile_definitions(SDL2-static PRIVATE SDL_DISABLE_WINDOWS_IME)
