--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,9 @@ if(USE_STATIC_CRT)
         endforeach()
     endif()
 endif()
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8" CACHE STRING "msvc compiler flags" FORCE)
+endif()
 
 add_subdirectory(deps)
 add_subdirectory(src)
