--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,14 @@ if(USE_STATIC_CRT)
             CMAKE_C_FLAGS_RELWITHDEBINFO
             )
         foreach(CompilerFlag ${CompilerFlags})
-            string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
-            set(${CompilerFlag} "${${CompilerFlag}}" CACHE STRING "msvc compiler flags" FORCE)
+            if(${CompilerFlag} MATCHES "/MD")
+                string(REGEX REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+            endif()
         endforeach()
     endif()
 endif()
 if(MSVC)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /utf-8" CACHE STRING "msvc compiler flags" FORCE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8" CACHE STRING "msvc compiler flags" FORCE)
 endif()
 
