finally get fixed MSVC 2019 with /MT support, and add LTCG to MSVC release builds.

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -50,6 +50,7 @@ endif()
 
 if(WIN32)
     set(LIBC ON CACHE BOOL "Use the system C library" FORCE)
+    set(FORCE_STATIC_VCRT ${USE_STATIC_CRT} CACHE BOOL "Force /MT for static VC runtimes" FORCE)
     set(DIRECTX OFF CACHE BOOL "Use DirectX for Windows video/audio" FORCE)
     set(RENDER_D3D OFF CACHE BOOL "Enable the Direct3D render driver" FORCE)
     set(WASAPI ON CACHE BOOL "Use the windows WASAPI audio driver" FORCE)
@@ -58,7 +59,9 @@ if(WIN32)
         string(TOUPPER ${_SUB} _OPT)
         set(SDL_${_OPT} OFF CACHE BOOL "Enable the ${_SUB} subsystem" FORCE)
     endforeach()
+    set(MESSAGE_QUIET ON)
     add_subdirectory(SDL2)
+    set(MESSAGE_QUIET OFF)
     if(TARGET SDL2-static)
         target_compile_definitions(SDL2-static PRIVATE SDL_DISABLE_WINDOWS_IME)
     endif()
