fixed compilation for linux

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -33,7 +33,9 @@ add_subdirectory(soxr)
 set(MESSAGE_QUIET OFF)
 target_include_directories(soxr PUBLIC soxr/src)
 if(DEPS_BUILD_SHARED)
-    target_compile_definitions(soxr PUBLIC SOXR_DLL)
+    if(WIN32)
+        target_compile_definitions(soxr PUBLIC SOXR_DLL)
+    endif()
     set_target_properties(soxr PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 endif()
 
