--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,9 @@ if(USE_FREETYPE)
     target_link_libraries(${PROJECT_NAME} ${FREETYPE_LIBRARIES})
 endif()
 target_link_libraries(${PROJECT_NAME} soxr ADLMIDI SDL2_gfx fmt::fmt)
-
+if(CMAKE_COMPILER_IS_GNUCXX)
+    target_link_libraries(${PROJECT_NAME} stdc++fs)
+endif()
 if(BUILD_TOOLS)
     add_executable(mergepic tools/mergepic.cc util/file.cc util/file.hh)
     set_target_properties(mergepic PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
