--- a/src/strings.toml
+++ b/src/strings.toml
@@ -139,4 +139,21 @@ strings = [
     "聲望",
     #115,
     "沒有可以使用的功夫",
+    "人 ({0},{1})",
+    "裝備要求：",
+    "修練要求：",
+    "陰性",
+    #120
+    "陽性",
+    "≥",
+    "<",
+    "特殊",
+    "裝備效果：",
+    #125
+    "修練效果：",
+    "使用效果：",
+    "投擲效果：",
+    "變為",
+    "陰陽調和",
+    "習得",
 ]
