disable VSYNC to reduce cpu usage

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -56,7 +56,7 @@ if(WIN32)
     set(DIRECTX OFF CACHE BOOL "Use DirectX for Windows video/audio" FORCE)
     set(RENDER_D3D OFF CACHE BOOL "Enable the Direct3D render driver" FORCE)
     set(WASAPI ON CACHE BOOL "Use the windows WASAPI audio driver" FORCE)
-    set(SDL_SUBSYSTEMS_TO_DISABLE Power Timers Filesystem Dlopen Sensor Locale)
+    set(SDL_SUBSYSTEMS_TO_DISABLE Power Filesystem Dlopen Sensor Locale)
     foreach(_SUB ${SDL_SUBSYSTEMS_TO_DISABLE})
         string(TOUPPER ${_SUB} _OPT)
         set(SDL_${_OPT} OFF CACHE BOOL "Enable the ${_SUB} subsystem" FORCE)
