--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,13 @@ if(USE_FREETYPE)
     target_compile_definitions(${PROJECT_NAME} PRIVATE USE_FREETYPE)
     target_link_libraries(${PROJECT_NAME} ${FREETYPE_LIBRARIES})
 endif()
-target_link_libraries(${PROJECT_NAME} soxr ADLMIDI SDL2_gfx fmt::fmt)
+if(USE_SOXR)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE USE_SOXR)
+    target_link_libraries(${PROJECT_NAME} soxr)
+else()
+    target_link_libraries(${PROJECT_NAME} zita-resampler)
+endif()
+target_link_libraries(${PROJECT_NAME} ADLMIDI SDL2_gfx fmt::fmt)
 if(CMAKE_COMPILER_IS_GNUCXX)
     target_link_libraries(${PROJECT_NAME} stdc++fs)
 endif()
