--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 option(USE_STATIC_CRT "Use static C runtime" OFF)
 option(USE_FREETYPE "Use freetype instead of stb_truetype" OFF)
+option(USE_SOXR "Use soxr instead of zita-resampler(better quality with more cpu use)" OFF)
 
 if(USE_STATIC_CRT)
     if(CMAKE_COMPILER_IS_GNUCXX)
