--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -21,22 +21,24 @@ set(MESSAGE_QUIET ON)
 add_subdirectory(fmt)
 set(MESSAGE_QUIET OFF)
 
-set(BUILD_TESTS OFF CACHE BOOL "Build sanity-tests." FORCE)
-set(BUILD_EXAMPLES OFF CACHE BOOL "Build examples." FORCE)
-set(WITH_OPENMP OFF CACHE BOOL "Include OpenMP threading." FORCE)
-set(WITH_LSR_BINDINGS OFF CACHE BOOL "Include a `libsamplerate'-like interface." FORCE)
-set(WITH_DEV_TRACE OFF CACHE BOOL "Enable developer trace capability." FORCE)
-set(WITH_DEV_GPROF OFF CACHE BOOL "Enable developer grpof output." FORCE)
-list (APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/soxr/cmake/Modules)
-set(MESSAGE_QUIET ON)
-add_subdirectory(soxr)
-set(MESSAGE_QUIET OFF)
-target_include_directories(soxr PUBLIC soxr/src)
-if(DEPS_BUILD_SHARED)
-    if(WIN32)
-        target_compile_definitions(soxr PUBLIC SOXR_DLL)
+if(USE_SOXR)
+    set(BUILD_TESTS OFF CACHE BOOL "Build sanity-tests." FORCE)
+    set(BUILD_EXAMPLES OFF CACHE BOOL "Build examples." FORCE)
+    set(WITH_OPENMP OFF CACHE BOOL "Include OpenMP threading." FORCE)
+    set(WITH_LSR_BINDINGS OFF CACHE BOOL "Include a `libsamplerate'-like interface." FORCE)
+    set(WITH_DEV_TRACE OFF CACHE BOOL "Enable developer trace capability." FORCE)
+    set(WITH_DEV_GPROF OFF CACHE BOOL "Enable developer grpof output." FORCE)
+    list (APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/soxr/cmake/Modules)
+    set(MESSAGE_QUIET ON)
+    add_subdirectory(soxr)
+    set(MESSAGE_QUIET OFF)
+    target_include_directories(soxr PUBLIC soxr/src)
+    if(DEPS_BUILD_SHARED)
+        if(WIN32)
+            target_compile_definitions(soxr PUBLIC SOXR_DLL)
+        endif()
+        set_target_properties(soxr PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
     endif()
-    set_target_properties(soxr PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 endif()
 
 set(libADLMIDI_STATIC ${DEPS_BUILD_STATIC} CACHE BOOL "Build static library of libADLMIDI" FORCE)
@@ -74,3 +76,10 @@ if(WIN32)
 endif()
 
 add_subdirectory(SDL2_gfx)
+
+if(NOT USE_SOXR)
+    add_library(zita-resampler STATIC
+        zita-resampler/source/resampler-table.cc
+        zita-resampler/source/vresampler.cc)
+    target_include_directories(zita-resampler PUBLIC zita-resampler/source)
+endif()
