--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(HeroesOfJinYongMain)
+project(HeroesOfJinYongMain CXX)
 
 file(GLOB CORE_FILES  core/*.cc  core/*.hh)
 file(GLOB DATA_FILES  data/*.cc  data/*.hh)
@@ -9,7 +9,10 @@ file(GLOB UTIL_FILES  util/*.cc  util/*.hh)
 add_executable(${PROJECT_NAME} WIN32 main.cc
     ${CORE_FILES} ${DATA_FILES} ${MEM_FILES} ${SCENE_FILES} ${AUDIO_FILES} ${UTIL_FILES})
 
-set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin RUNTIME_OUTPUT_NAME hojy)
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    CXX_STANDARD 17
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    RUNTIME_OUTPUT_NAME hojy)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(${PROJECT_NAME} PRIVATE SDL_MAIN_HANDLED)
 if(USE_FREETYPE)
