add option menu

--- a/src/strings.toml
+++ b/src/strings.toml
@@ -155,5 +155,13 @@ strings = [
     "投擲效果：",
     "變為",
     "陰陽調和",
+    #130
     "習得",
+    "選項",
+    "坐標面板",
+    "音樂音量",
+    "音效音量",
+    #135
+    "開",
+    "關",
 ]
