--- a/src/config.toml
+++ b/src/config.toml
@@ -26,3 +26,5 @@ window_border = 8
 sample_rate = 48000
 # I16 = sint16, I32 = sint32, F32 = float
 sample_format = "I16"
+music_volume = 5
+sound_volume = 5
