--- a/src/config.toml
+++ b/src/config.toml
@@ -17,6 +17,7 @@ simplified_chinese = false
 no_name_input = false
 show_potential = true
 show_map_mini_panel = true
+show_minimap = true
 scale = 2.0
 animation_speed = 1.0
 fade_speed = 1.0
