--- a/src/config.toml
+++ b/src/config.toml
@@ -7,8 +7,8 @@ fonts = ["data/font/english.ttf", "data/font/chinese.ttf"]
 ship_logic_enabled = true
 
 [window]
-width = 640
-height = 480
+width = 1024
+height = 640
 show_fps = false
 limit_fps = 0
 
@@ -25,7 +25,8 @@ window_border = 8
 
 [audio]
 sample_rate = 48000
-# I16 = sint16, I32 = sint32, F32 = float
+# For soxr resampler: I16 = sint16, I32 = sint32, F32 = float
+# For zita resampler: this option is ignored, sample format is always F32
 sample_format = "I16"
 music_volume = 5
 sound_volume = 5
