--- a/src/config.toml
+++ b/src/config.toml
@@ -3,7 +3,7 @@ data_path = ["data", "."]
 music_path = "data"
 sound_path = "data"
 save_path = "data"
-fonts = ["data/font/english.ttf", "data/font/chinese.ttf"]
+fonts = "data/font/chinese.otf"
 ship_logic_enabled = true
 
 [window]
